--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!-- <i class="fas fa-heart"></i> -->
         <main>
             <div class="row">
                 <div class="box">
-
+                    <div class="sale">-30%</div>
+                    <div class="heart"></div>
                 </div>
                 <div class="box">
-
+                    <div class="sale">-15%</div>
+                    <div class="heart"></div>
                 </div>
                 <div class="box">
-
+                    <div class="sale">-30%</div>
+                    <div class="heart"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="box">
-
+                    <div class="sale">-30%</div>
+                    <div class="heart"></div>
                 </div>
                 <div class="box">
-
+                    <div class="sale">-15%</div>
+                    <div class="heart"></div>
                 </div>
                 <div class="box">
-
+                    <div class="sale">-30%</div>
+                    <div class="heart"></div>
                 </div>
             </div>
         </main>
