--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <div class="row">
                 <div class="box">
                     <div class="sale">-30%</div>
-                    <div class="heart"></div>
+                    <div class="overlay"></div>
+                    <span class="fas fa-heart"></span>
                 </div>
                 <div class="box">
                     <div class="sale">-15%</div>
